# ChangeLog for x11-misc/talika
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/talika/ChangeLog,v 1.4 2011/01/24 13:14:08 fauli Exp $

  24 Jan 2011; Christian Faulhammer <fauli@gentoo.org> talika-0.50.ebuild:
  stable x86, bug 351793

*talika-0.50 (11 Sep 2010)

  11 Sep 2010; Markos Chandras <hwoarang@gentoo.org> +talika-0.50.ebuild,
  +files/talika-0.50-docs.patch:
  Version bump

  31 May 2010; Markos Chandras <hwoarang@gentoo.org> talika-0.49.ebuild:
  Fixed testsuite wrt bug #322163

*talika-0.49 (30 May 2010)

  30 May 2010; Markos Chandras <hwoarang@gentoo.org> +talika-0.49.ebuild,
  +metadata.xml:
  Initial commit of talika gnome applet. Fixes bug #318239
