@@ -1,17 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX talika-0.50-docs.patch 598 RMD160 beb95aad173cacee2a6a685b95f1876526f8509d SHA1 90232c1673a1639769161a873003ccb33f90ffce SHA256 6673b29fdb920a0a8e67ebb471d3b4c37416581cb146384e4eef83cf7003a8e6
-DIST talika-0.49.tar.gz 167433 RMD160 57cf42089ddc0bd57411ce98d3154c07f14d4000 SHA1 45f71f73fa389c4b51838fb31cdec58dcbf7496d SHA256 379b7a10117f74ee0bd28290b8eaa0aa2d56a64c96689d0d7ae711aafddcc8d3
 DIST talika_0.50-1.tar.gz 191232 RMD160 abcfe082d63ad406f848b8e114fad63597367202 SHA1 33854674e3e080e83d48149b794a8b75277143b2 SHA256 c4fb38e239825fea369b36fc54f582cc534ab88e6b3c1ac1d724ed76550d5b4d
-EBUILD talika-0.49.ebuild 823 RMD160 c74ec7f4a30c690217b1644a9ac52c4f08765ef7 SHA1 483c3d2e5f38359b6989e6ed33fe14dd88bddec9 SHA256 86908a1739b0323c541f412b81047ad00dca6d97196c45e661fc05cdef0a0db8
-EBUILD talika-0.50.ebuild 900 RMD160 0e9be7c887694deffe14e9ab465099cc75fcd527 SHA1 299cd474fa7856d5fd871ecd6d2350184e3ecf04 SHA256 3dedfe056d0b5fe332624477edbc57aaba50f2816447db3724cb8033dc0a04a4
-MISC ChangeLog 741 RMD160 703fee04b5c474f14a3dcecf135e5ac1cb479a6e SHA1 2708e6dc3f2e6d5353ddca32f8d44efad7333d75 SHA256 cd862e167289e3f87883c34cef868f36515ba26028dd366cd986de4b66de8851
+EBUILD talika-0.50.ebuild 902 RMD160 9a65ac745a49b41fb506bda07b50ca2e66d367bd SHA1 ce23e61dcd35f2b5c254a2b188eaa4ed17f0eca5 SHA256 e9e526779e852d7bd236f535fe630ccf1496c0cf3cddcf31791e15fead02b1b9
+MISC ChangeLog 887 RMD160 0674063216e389e414d274319cd20e0933671c91 SHA1 a38726747a8a6f6fae89e0d91ce7078395278219 SHA256 3cf7d5b4c0bc68e53c4e4b44b895d64ddf764df16ab574d23aae79449dd4f66d
 MISC metadata.xml 513 RMD160 1bb71d684731a3716d2d391a96063983b7b5e9c8 SHA1 3183a1237bc45cdf59df15a43826735e633eef93 SHA256 9a569086ccee92ee077d9fa14c1022edafeccee9c4ac27b9f5bb4d53a865cb84
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk09fD8ACgkQNQqtfCuFneNRMQCgiAz44X3vuKjqwyDPYU52bqgx
-gukAn2E1xAYfpF3iqBGMCrCyRNDKt7vD
-=TgDj
+iQIcBAEBCgAGBQJNPtiEAAoJEPqDWhW0r/LCEY8P/RhHSd95gygyqjlHpyLA0ZC8
+R7H2iiKeK81aknAHGIPxdsBR2hJgw7CV7mqzQjeC6cgsqUFzTlPpXo22grc0Qiba
+65k23yqdGkwEdarB9RCJVJo71sROAvDO+fiVcI2TSZ3cJYTyhr7raXswFLF2bv2s
+5TmMEWpxmkcYroIybhwGeZOsAJ1TyzLwS3jhmC9b3xFBeSiYnDoDwKZY8vHK6Syc
+TvcYprFqy1RjJSDcG2EmzsnZDL6Y6sd35TeU5ACkV6tmGlfuqe7nSX0z4OAw6UW1
+khRTToD/Ot/hhMwPc+BnumMPkIh3hnP/wgYW1HglQ5XNaCXp8UhLrtPMamc+ijWA
+wCKADBLh8veyMLoHR0qAYkDKUM0/YiOkqDmpRx9WxMRz7h6sPmSGVNgYBCcQf1Oc
+BblbZxV0qFiKLcX0JurHtsdhaCUkHP4U9a2xjJHl8CIkDNwHgMDDmxWuBNiGywT2
+W2YiJ8HrKhMV0LofF3+63hzyizp4vf/H8f6l7mFyFojKSVs1D2wpxNrn92j+S3+t
+ez6vWYlNS2hWDT2Ze7Unf1HYJUqhf+6YijwvLUdkn9VmSb6thg1fS7OBekZMlXco
+U86HavFzVnbEoOMS8v/gR7Hy5ctAXeOtcLv2HJCH10pwxiQ3Ye+Py8LxHxA0+F7y
+8wOY+yx1RoGwdmxhFJTA
+=ts1R
 -----END PGP SIGNATURE-----
